--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
-    "@heroicons/react": "^1.0.6",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
@@ -18,9 +17,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6",
-    "postcss": "^8.4.13",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.4"
+    "eslint-config-next": "12.1.6"
   }
 }
